log/build_2024-02-20_22-27-29/ar_loc_base/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/GTL/wxu/cs7630_g6/install/ar_loc_base/lib/python3.10/site-packages/ar_loc_base/rover_kf.py", line 56
    logger.info(f"A.shape: {A.shape}, self.P.shape: {self.P.shape},
                ^
SyntaxError: unterminated string literal (detected at line 56)

